--- a/src/compose.yml
+++ b/src/compose.yml
@@ -12,3 +12,7 @@ services:
       - 5000:5000
     volumes:
       - ./api:/app
+    watch:
+      - action: sync
+        path: ./api
+        target: /src/api
