--- a/src/compose.yml
+++ b/src/compose.yml
@@ -1,18 +1,44 @@
-name: fastapi-template 
+name: baeldung
 
 services:
+  database:
+    image: postgres:17.4-alpine3.21
+    container_name: postgres
+    restart: always
+    env_file: ".env"
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DATABASE} -U $${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    networks:
+      - network
+
   api:
     image: cmtabr/fastapi-template:1.0.0
     container_name: backend
     build:
-      context: api
+      context: api/
       dockerfile: Dockerfile
     command: uvicorn app:app --host 0.0.0.0 --port 5000
     ports:
       - 5000:5000
-    volumes:
-      - ./api:/app
-    watch:
-      - action: sync
-        path: ./api
-        target: /src/api
+    # uncomment the following line to mount 
+    # the local directory to the container
+    # volumes:
+    #   - ./api:/app
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - network
+
+networks:
+  network:
+    driver: bridge
