fix: :construction_worker: fixes .dockerignore  to actually ignores cache and virtual enviroment files

--- a/src/api/.dockerignore
+++ b/src/api/.dockerignore
@@ -1,9 +1,2 @@
-# Ignores itself
-.dockerignore
-
-# Ignores python common files
-*.pyc
-__pycache__/
-
-# Enviroment stuff
-venv/
+# Ignore the virtual environment
+venv
