--- a/src/compose.yml
+++ b/src/compose.yml
@@ -20,6 +20,22 @@ services:
     networks:
       - network
 
+  redis:
+    image: redis:8.0.0-alpine3.21
+    container_name: redis
+    restart: always
+    env_file: ".env"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli -a $${REDIS_PASSWORD} ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    networks:
+      - network
+
   api:
     image: cmtabr/fastapi-template:1.0.0
     container_name: backend
@@ -38,6 +54,8 @@ services:
     #   - ./api:/app/api
     depends_on:
       database:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
       - network
