--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -13,6 +13,7 @@ pydantic-settings==2.8.1
 pydantic_core==2.33.0
 PyJWT==2.10.1
 python-dotenv==1.1.0
+redis==6.0.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.1
